--- a/index.html
+++ b/index.html
@@ -10,43 +10,46 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700;800;900&display=swap" rel="stylesheet">
 
+<!-- Favicon / Shortcut icon -->
 <link rel="icon" type="image/svg+xml"
   href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
     <circle cx="32" cy="32" r="30" fill="#7c3aed"/>
-    <text x="32" y="42" font-family="sans-serif" font-size="24" font-weight="bold" fill="white" text-anchor="middle">S</text>
+    <text x="32" y="42" font-family="Arial, Helvetica, sans-serif" font-size="28" font-weight="700" fill="white" text-anchor="middle">S</text>
+  </svg>'/>
+<link rel="shortcut icon" href='data:image/svg+xml;utf8,
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+    <circle cx="32" cy="32" r="30" fill="#7c3aed"/>
+    <text x="32" y="42" font-family="Arial, Helvetica, sans-serif" font-size="28" font-weight="700" fill="white" text-anchor="middle">S</text>
   </svg>'/>
 
-<!-- Additional favicon formats for better browser compatibility -->
+<!-- PNG fallbacks for older browsers -->
 <link rel="icon" type="image/png" sizes="32x32" href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
     <circle cx="16" cy="16" r="15" fill="#7c3aed"/>
-    <text x="16" y="21" font-family="sans-serif" font-size="12" font-weight="bold" fill="white" text-anchor="middle">S</text>
+    <text x="16" y="21" font-family="Arial, Helvetica, sans-serif" font-size="14" font-weight="700" fill="white" text-anchor="middle">S</text>
   </svg>'/>
 <link rel="icon" type="image/png" sizes="16x16" href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
     <circle cx="8" cy="8" r="7" fill="#7c3aed"/>
-    <text x="8" y="11" font-family="sans-serif" font-size="6" font-weight="bold" fill="white" text-anchor="middle">S</text>
+    <text x="8" y="11" font-family="Arial, Helvetica, sans-serif" font-size="7" font-weight="700" fill="white" text-anchor="middle">S</text>
   </svg>'/>
 
-<!-- Apple Touch Icon for home screen -->
-<link rel="apple-touch-icon" href='data:image/svg+xml;utf8,
+<!-- Safari pinned tab (선택) -->
+<link rel="mask-icon" color="#7c3aed" href='data:image/svg+xml;utf8,
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+    <circle cx="32" cy="32" r="30" fill="black"/>
+    <text x="32" y="42" font-family="Arial, Helvetica, sans-serif" font-size="28" font-weight="700" fill="white" text-anchor="middle">S</text>
+  </svg>'/>
+
+<!-- iOS home screen icon -->
+<link rel="apple-touch-icon" sizes="180x180" href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 180 180">
-    <circle cx="90" cy="90" r="85" fill="#7c3aed"/>
-    <text x="90" y="118" font-family="sans-serif" font-size="68" font-weight="bold" fill="white" text-anchor="middle">S</text>
+    <rect width="180" height="180" rx="36" ry="36" fill="#7c3aed"/>
+    <text x="90" y="118" font-family="Arial, Helvetica, sans-serif" font-size="64" font-weight="800" fill="white" text-anchor="middle">Sori</text>
   </svg>'/>
-
-<!-- Android and PWA icons -->
-<link rel="icon" type="image/png" sizes="192x192" href='data:image/svg+xml;utf8,
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 192">
-    <circle cx="96" cy="96" r="90" fill="#7c3aed"/>
-    <text x="96" y="125" font-family="sans-serif" font-size="48" font-weight="bold" fill="white" text-anchor="middle">Sori</text>
-  </svg>'/>
-<link rel="icon" type="image/png" sizes="512x512" href='data:image/svg+xml;utf8,
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-    <circle cx="256" cy="256" r="240" fill="#7c3aed"/>
-    <text x="256" y="340" font-family="sans-serif" font-size="128" font-weight="bold" fill="white" text-anchor="middle">Sori</text>
-  </svg>'/>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="Sori">
 
 <!-- PWA Manifest -->
 <link rel="manifest" href="/manifest.webmanifest">
@@ -97,6 +100,7 @@ h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 .row-between{display:flex;justify-content:space-between;align-items:center;gap:8px}
 .badge{display:inline-block;background:#7c3aed;color:#fff;font-size:11px;font-weight:800;padding:5px 10px;border-radius:12px}
 .icon-btn{border:none;background:transparent;width:36px;height:36px;display:inline-flex;align-items:center;justify-content:center;font-size:20px;color:#9ca3af;cursor:pointer;border-radius:8px}
+.icon-btn svg{display:block}
 .icon-btn.active{color:#e11d48}
 
 #lessonCard .context,
@@ -213,7 +217,14 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 
     <div style="display:flex;gap:6px;align-items:center;">
       <!-- 공유 버튼 (별표와 동일한 디자인) -->
-      <button id="threadShareBtn" class="icon-btn" title="Share" aria-label="Share" type="button" style="font-size:18px;">↗</button>
+      <button id="threadShareBtn" class="icon-btn" title="Share" aria-label="Share" type="button">
+        <svg aria-hidden="true" viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+          <!-- 바깥 네모 (좌하단 열린 박스) -->
+          <path d="M4 9a3 3 0 0 1 3-3h5v2H7a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-5h2v5a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V9z"/>
+          <!-- 바깥으로 나가는 화살표 (우상향) -->
+          <path d="M14 3h7v7h-2V6.414l-8.293 8.293-1.414-1.414L17.586 5H14V3z"/>
+        </svg>
+      </button>
 
       <!-- 기존 별표 저장 버튼 -->
       <button id="scrapBtn" class="icon-btn" title="Save this phrase" aria-label="Save" style="font-size:18px;">☆</button>
