명사 뜻 추가4

--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@ h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 
 .context{color:#6b7280;font-size:16px;text-align:center;margin:8px 0 0;font-weight:600}
 
-.kbox{background:#f3f4f6;border-radius:16px;padding:18px 14px;margin:12px 0;text-align:center}
+.kbox{background:#f3f4f6;border-radius:16px;padding:18px 14px;margin:10px 0;text-align:center}
 .ko{font-size:30px;font-weight:900;margin:0 0 8px}
 .en{color:#6b7280;font-size:16px;margin:0 0 10px;font-weight:600}
 
-.practice{background:#f9fafb;border-radius:12px;padding:12px}
+.practice{background:#f9fafb;border-radius:12px;padding:12px;margin:10px 0}
 .practice-label{font-size:12px;font-weight:600;color:#6b7280;text-align:center;margin:0 0 8px}
 .dots{display:flex;gap:10px;justify-content:center;margin-bottom:8px}
 .rep-dot{width:30px;height:30px;border-radius:50%;border:2px solid #e5e7eb;background:#fff;transition:.15s}
 .rep-dot.completed{background:#7c3aed;border-color:#7c3aed}
 
-button.big{width:100%;padding:14px 20px;border-radius:14px;border:0;cursor:pointer;font-weight:800;font-size:15px;background:#7c3aed;color:#fff}
+button.big{width:100%;padding:14px 20px;border-radius:14px;border:0;cursor:pointer;font-weight:800;font-size:15px;background:#7c3aed;color:#fff;margin:10px 0}
 
-.row{display:flex;align-items:center;justify-content:center;gap:12px;background:#f9fafb;border-radius:10px;padding:10px;margin-top:8px}
+.row{display:flex;align-items:center;justify-content:center;gap:12px;background:#f9fafb;border-radius:10px;padding:10px;margin:10px 0}
 .speed-val{min-width:56px;text-align:left;font-variant-numeric:tabular-nums}
 input[type="range"]{accent-color:#7c3aed;outline:0}
 input[type="range"]::-webkit-slider-runnable-track{height:6px;border-radius:999px;background:#e9defd}
@@ -130,11 +130,11 @@ input[type="range"]::-webkit-slider-thumb{width:18px;height:18px;border-radius:5
 input[type="range"]::-moz-range-track{height:6px;border-radius:999px;background:#e9defd}
 input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;background:#7c3aed;border:2px solid #6d28d9}
 
-.tip-card{margin-top:10px;background:#fff1f2;border-left:3px solid #e11d48;border-radius:10px;padding:10px}
+.tip-card{margin:10px 0;background:#fff1f2;border-left:3px solid #e11d48;border-radius:10px;padding:10px}
 .tip-text{font-size:12px;color:#9f1239;font-weight:600}
 
 /* 명사 뜻 표시 영역 스타일 */
-.noun-definitions{background:#f8f9fa;border-radius:12px;padding:12px;margin:8px 0}
+.noun-definitions{background:#f8f9fa;border-radius:12px;padding:12px;margin:10px 0}
 .noun-list{display:flex;flex-wrap:wrap;gap:8px;justify-content:center}
 .noun-item{display:flex;align-items:center;gap:6px;background:#fff;border-radius:8px;padding:6px 10px;font-size:12px;font-weight:600}
 .noun-korean{color:#7c3aed;font-weight:800}
