--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <rect width="180" height="180" rx="36" ry="36" fill="#7c3aed"/>
     <text x="90" y="118" font-family="Arial, Helvetica, sans-serif" font-size="64" font-weight="800" fill="white" text-anchor="middle">Sori</text>
   </svg>'/>
-<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Sori">
 
 <!-- PWA Manifest -->
@@ -347,7 +347,7 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 <script defer src="data/numbers.js?v=20251019"></script>
 <script defer src="data/dataindex.js?v=20251019"></script>
 <script defer src="data/nouns.js?v=20251019"></script>
-<script defer src="data/speech-level.js?v=20251021"></script>
+<script defer src="data/speech-level.js?v=20251022"></script>
 <script defer src="data/data-processor.js?v=20251019"></script>
 
 <!-- app scripts -->
