--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@ document.addEventListener('DOMContentLoaded', function(){
       
     } catch(e) {
       console.error('Share failed:', e);
-      alert('공유에 실패했습니다: ' + e.message);
+      // alert 제거됨
     }
   }
 
