마이너수정1

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 <body>
 <header class="header">
   <div>
-    <h1>Sori <span style="font-size:14px;color:#9ca3af;font-weight:600;">(beta)</span></h1>
+    <h1><span style="color:#111827;">소리(beta)</span> <span style="color:#7c3aed;">Sori</span></h1>
     <div class="intro">Learn Korean naturally by repeating real sounds</div>
   </div>
   <button id="openLogin" class="top-btn primary">Login</button>
