--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ body{font-family:'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Segoe UI', 
 h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 .intro{color:#9ca3af;font-size:12px;margin-bottom:10px;line-height:1.3;font-weight:500}
 
-.header{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px}
+.header{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px;position:relative}
+.header::before{content:'beta';position:absolute;left:-24px;top:-2px;font-size:32px;font-weight:900;color:#fff;background:#7c3aed;padding:4px 12px;border-radius:8px;text-transform:uppercase;letter-spacing:2px;z-index:1}
 .top-btn{padding:8px 14px;border-radius:12px;font-size:12px;font-weight:700;border:0;cursor:pointer}
 .top-btn.primary{background:#7c3aed;color:#fff}
 
@@ -82,7 +83,8 @@ h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 
 .category-bar{display:flex;align-items:center;gap:12px}
 .picker-wrap{position:relative}
-.picker-trigger{padding:12px 18px;border-radius:14px;background:#7c3aed;color:#fff;font-weight:800;border:0;cursor:pointer;min-width:220px;text-align:center}
+.picker-trigger{padding:12px 18px;border-radius:14px;background:#7c3aed;color:#fff;font-weight:800;border:0;cursor:pointer;min-width:220px;text-align:center;display:flex;align-items:center;justify-content:center;gap:8px}
+.picker-trigger::after{content:'▼';font-size:10px;color:#fff}
 .picker-menu{position:absolute;top:100%;left:0;right:0;margin-top:6px;background:#fff;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,.15);overflow:hidden;max-height:0;transition:max-height .25s ease;z-index:50}
 .picker-menu.open{max-height:220px}
 .picker-list{max-height:210px;overflow-y:auto;padding:6px;scrollbar-width:thin;position:relative}
@@ -99,9 +101,13 @@ h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 .saved-btn.selected{background:#7c3aed;color:#fff;border-color:#7c3aed}
 .picker-trigger.dim{background:#ede9fe;color:#6b21a8}
 
-.sub-filters{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px}
+.sub-filters{display:none;gap:8px;flex-wrap:wrap;margin-top:12px;transition:opacity 0.2s ease;}
+.sub-filters.visible{display:flex}
 .sub-chip{display:inline-flex;align-items:center;gap:6px;padding:6px 12px;border-radius:14px;background:#fff;border:2px solid #e5e7eb;color:#374151;font-size:12px;font-weight:600;cursor:pointer;user-select:none}
 .sub-chip.active{background:#7c3aed;border-color:#7c3aed;color:#fff}
+.sub-chip-toggle{width:100%;padding:8px 12px;border-radius:12px;background:#f3f4f6;color:#6b7280;font-size:12px;font-weight:700;border:2px solid #e5e7eb;cursor:pointer;margin-top:8px;display:flex;align-items:center;justify-content:center;gap:4px}
+.sub-chip-toggle::after{content:'▼';font-size:10px;transition:transform 0.2s ease}
+.sub-chip-toggle.expanded::after{transform:rotate(180deg)}
 
 .row-between{display:flex;justify-content:space-between;align-items:center;gap:8px}
 .badge{display:inline-block;background:#7c3aed;color:#fff;font-size:11px;font-weight:800;padding:5px 10px;border-radius:12px}
@@ -238,7 +244,7 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 <body>
 <header class="header">
   <div>
-    <h1>Sori <span style="font-size:14px;color:#111827;font-weight:600;">소리(beta)</span></h1>
+    <h1>Sori <span style="font-size:14px;color:#111827;font-weight:600;">소리</span></h1>
     <div class="intro">Learn Korean naturally by repeating real sounds</div>
   </div>
   <button id="openLogin" class="top-btn primary">Login</button>
@@ -263,6 +269,9 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
   </div>
 
   <div id="subFilters" class="sub-filters"></div>
+  <button id="subFiltersToggle" class="sub-chip-toggle" style="display:none;">
+    <span>카테고리 보기</span>
+  </button>
 </section>
 
 <section class="card" id="lessonCard">
@@ -573,6 +582,27 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
     "Tip: Bite-sized goals. One phrase at a time.","Tip: Revisit yesterday — retention makes speed."
   ];
   const tipEl=tipText; function changeTip(){ tipEl.textContent=tips[Math.floor(Math.random()*tips.length)]; } changeTip();
+
+  // 카테고리 토글 기능
+  const subFiltersToggle = document.getElementById('subFiltersToggle');
+  const subFilters = document.getElementById('subFilters');
+  if (subFiltersToggle && subFilters) {
+    subFiltersToggle.addEventListener('click', () => {
+      subFilters.classList.toggle('visible');
+      subFiltersToggle.classList.toggle('expanded');
+      subFiltersToggle.querySelector('span').textContent = 
+        subFilters.classList.contains('visible') ? '카테고리 숨기기' : '카테고리 보기';
+    });
+    
+    // subFilters가 처음 로드될 때 자동으로 숨김 처리
+    // app.js에서 display를 flex로 설정할 때 토글 버튼도 표시
+    const observer = new MutationObserver(() => {
+      if (subFilters.innerHTML.trim() !== '') {
+        subFiltersToggle.style.display = 'block';
+      }
+    });
+    observer.observe(subFilters, { childList: true, subtree: true });
+  }
 })();
 </script>
 
