--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 .intro{color:#9ca3af;font-size:12px;margin-bottom:10px;line-height:1.3;font-weight:500}
 
 .header{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px;position:relative}
-.header::before{content:'beta';position:absolute;left:-24px;top:-2px;font-size:32px;font-weight:900;color:#fff;background:#7c3aed;padding:4px 12px;border-radius:8px;text-transform:uppercase;letter-spacing:2px;z-index:1}
+.header::before{content:'beta';position:absolute;left:80px;top:-6px;font-size:10px;font-weight:900;color:#fff;background:#7c3aed;padding:2px 6px;border-radius:4px;text-transform:uppercase;letter-spacing:1px;z-index:1}
 .top-btn{padding:8px 14px;border-radius:12px;font-size:12px;font-weight:700;border:0;cursor:pointer}
 .top-btn.primary{background:#7c3aed;color:#fff}
 
@@ -270,7 +270,7 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 
   <div id="subFilters" class="sub-filters"></div>
   <button id="subFiltersToggle" class="sub-chip-toggle" style="display:none;">
-    <span>카테고리 보기</span>
+    <span>View Categories</span>
   </button>
 </section>
 
@@ -591,7 +591,7 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
       subFilters.classList.toggle('visible');
       subFiltersToggle.classList.toggle('expanded');
       subFiltersToggle.querySelector('span').textContent = 
-        subFilters.classList.contains('visible') ? '카테고리 숨기기' : '카테고리 보기';
+        subFilters.classList.contains('visible') ? 'Hide Categories' : 'View Categories';
     });
     
     // subFilters가 처음 로드될 때 자동으로 숨김 처리
